<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorECF0F1F"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetLeft="0dp">

        <ImageView
            android:id="@+id/icon_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@mipmap/icon_back"
            android:padding="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/color000000"
            android:textStyle="bold"
            app:contentInsetLeft="0dp" />
    </androidx.appcompat.widget.Toolbar>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color999999" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:text="Sing up and start palying.\nIt's free to join"
        android:textColor="@color/color000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:background="@color/color3b59989"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/facebook"
        android:textColor="@color/colorFFFFFF"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/color999999" />

    <EditText
        android:textColor="@color/color000000"
        android:id="@+id/username"
        android:textColorHint="@color/cardview_shadow_start_color"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_gray_fillet"
        android:hint="Email Address"
        android:padding="10dp" />

    <EditText
        android:textColor="@color/color000000"
        android:inputType="textPassword"
        android:id="@+id/password"
        android:textColorHint="@color/cardview_shadow_start_color"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_gray_fillet"
        android:hint="Password"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp">

        <TextView
            android:id="@+id/check1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check1"
            android:textColor="@color/cardview_shadow_start_color" />

        <TextView
            android:id="@+id/check2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/check2"
            android:textColor="@color/cardview_shadow_start_color" />

        <TextView
            android:id="@+id/check3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/check3"
            android:textColor="@color/cardview_shadow_start_color" />
    </LinearLayout>

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_green_fillet"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/sign_up"
        android:textColor="@color/colorFFFFFF"
        android:textSize="16sp" />

    <TextView
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/agree"
        android:textColor="@color/cardview_shadow_start_color" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/color999999" />
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/already"
        android:textColor="@color/cardview_shadow_start_color" />
</LinearLayout>